feat: add popularity to health insurances
